add linters, add new styling

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <p id="dateTime"></p>
 </div>
 
-<div class="awesomeBooks"><h4 >All awesome Books</h4></div>
+<div class="awesomeBooks"><h2 >All awesome Books</h2></div>
 
 <div class="books">
     
@@ -48,7 +48,7 @@
   </section>
   <footer class="copyright">
     <div >
-      <p>&copy; Copyright Gilbert&Kelvin</p>
+      <p>&copy; Copyright Kelvin</p>
     </div>
   </footer>
   <script src="index.js" type="module"></script>
